[tool.poetry]
name = "qiita"
version = "0.1.0"
description = ""
authors = ["tsuno0829 <tsnry7913@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
matplotlib = "^3.3.1"
scikit-learn = "^0.23.2"
plotly = "^4.13.0"
jupyter = "^1.0.0"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
